--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <img class="place-center" style="width: 800px" src="/imgs/bpg-f4.jpg" alt="">
+  <img class="place-center" style="width: 800px" src="/imgs/bpg-f4.png" alt="">
 </body>
 
 </html>
